--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "clarifai": "^2.9.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-parallax-tilt": "^1.4.53",
     "react-particles-js": "^3.2.1",
-    "react-scripts": "3.4.1",
-    "react-tilt": "^0.1.4"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
