--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.156",
     "react-scripts": "5.0.1",
-    "react-particles-js": "^3.2.1"
+    "react-tsparticles": "^2.12.1",
+    "tsparticles": "^2.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
